# picture-stage

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml  tailwind.config.js  user-findings.txt
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_add_disabled_user_status.py  0003_add_tokens_valid_after.py  0004_add_image_processing_status.py  0005_add_gallery_guest_message.py  0006_add_pending_signup_ip_address.py  0007_add_user_gallery_limit_override.py
app/: config.py  logging_config.py  main.py
app/admin/: router.py  service.py
app/auth/: dependencies.py  passwords.py  router.py  schemas.py  startup.py  tokens.py  utils.py
app/cli/: backup.py
app/db/: base.py  migrations.py  models.py  session.py
app/frontend/: admin.py  auth.py  dashboard.py  deps.py  galleries.py  guest.py  legal.py  setup.py
app/galleries/: deletion.py  export.py  quota.py  router.py  schemas.py  sharing.py
app/guest/: router.py  schemas.py  service.py
app/i18n/: __init__.py  de.json  en.json
app/images/: preview_worker.py  process_pool.py  processing.py  router.py  schemas.py  upload_limits.py
app/notifications/: router.py  schemas.py  service.py
app/security/: middleware.py  signing.py
app/selections/: schemas.py  service.py
app/storage/: base.py  dependencies.py  local.py  s3.py
app/templates/: _legal_footer.html  auth_base.html  base.html  guest_base.html
app/templates/_macros/: buttons.html  cards.html  empty.html  forms.html  modal.html  skeleton.html  toast.html
app/templates/admin/: _nav_badge.html  _signup_row.html  _user_row.html  pending.html  users.html
app/templates/auth/: login.html  signup.html  verify.html
app/templates/dashboard/: _gallery_card.html  index.html
app/templates/email/: gallery_completed.html  gallery_completed.txt  signup_pending.html  signup_pending.txt  verify_email.html  verify_email.txt
app/templates/galleries/: _audit_log_table.html  _delete_modal.html  _image_grid.html  _owner_lightbox.html  _share_modal.html  _upload.html  audit_log.html  detail.html  selection.html
app/templates/guest/: _complete_modal.html  _image_grid.html  _lightbox.html  _password.html  expired.html  viewer.html
docs/: lessons-learned.md
docs/design/: build.md  components.md  primitives.md  tokens.md
legal/: datenschutz.example.md  impressum.example.md
scripts/: functional_test_v03.py  smoke_test_v03.sh  smtp_smoke.py  verify-handover.sh
tests/: conftest.py
tests/integration/: conftest.py  test_admin_users.py  test_audit_log.py  test_completion_notification.py  test_cookie_security.py  test_expiry.py  test_export_selections.py  test_frontend_gallery_delete.py  test_gallery_delete.py  test_guest_complete.py  test_guest_message.py  test_guest_owner_status.py  test_guest_selection_session.py  test_signup_enumeration.py
tests/migrations/: test_migration_drift.py
tests/security/: test_tenant_isolation.py
tests/unit/: pool_helpers.py  test_admin_dashboard.py  test_auth_disabled_status.py  test_bulk_operations.py  test_client_ip_extraction.py  test_cookie_secure_setting.py  test_decompression_bomb.py  test_frontend_admin_users.py  test_frontend_auth.py  test_frontend_dashboard.py  test_frontend_foundation.py  test_frontend_gallery_detail.py  test_frontend_guest.py  test_frontend_legal.py  test_gallery_expiry_validation.py  test_gallery_lifecycle.py  test_gallery_quota.py  test_gallery_quota_override.py  test_gallery_schema_expiry_validation.py  test_jwt_invalidation.py  test_logging_config.py  test_login_timing_unit.py  test_notifications.py  test_preview_worker.py  test_process_pool.py  test_request_body_limit.py  test_share_url.py  test_signup_enumeration_unit.py  test_sort_filter.py  test_upload_limits.py  test_watermark_config.py
(+15 files in other folders)
