[project]
name = "picture-stage"
version = "0.1.0"
description = "Self-hosted photo proofing for photographers and models"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "Norbert Schramm" },
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pillow>=11.0",
    "aioboto3>=13.0",
    "aiosmtplib>=3.0",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "bcrypt>=4.2",
    "python-jose[cryptography]>=3.3",
    "jinja2>=3.1",
    "aiofiles>=24.1",
    "httpx>=0.28",
    "pebble>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-python-jose>=3.3",
    "types-aiofiles>=24.1",
]

[project.scripts]
picture-stage = "app.cli.backup:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "S",         # bandit (security)
    "B",         # bugbear
    "UP",        # pyupgrade
    "RUF",       # ruff-specific
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["Depends", "Query", "Path", "Header", "Cookie", "Body", "Form", "File", "Security"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"app/**/*.py" = ["B008"]
"app/cli/backup.py" = ["S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["aioboto3"]
ignore_missing_imports = true

# pebble ships partial, imprecise type hints (e.g. ProcessPool.schedule timeout
# typed as float, args as list); skip following them so the imported symbols are
# treated as untyped rather than failing strict checks (picture-stage-q9td).
[[tool.mypy.overrides]]
module = ["pebble"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
